# discord-stats

./: .gitignore  README.md  pyproject.toml
discord_stats/: __init__.py  cli.py  discord_client.py
discord_stats/bot/: __init__.py
discord_stats/collectors/: __init__.py  message_stats.py
discord_stats/config/: __init__.py  loader.py  models.py
discord_stats/formatters/: __init__.py  message_stats.py
